feat: q4s-32 - Add q4s pdf call to render.sh template (spec-005, spec-006)
The render.sh script now automatically exports PDF after rendering PPTX.

Changes:
- Updated render.sh.template to call 'q4s pdf' after quarto render
- Added success message for PDF creation
- Added error handling for PDF export failures
- Updated test to verify q4s pdf call is present in generated scripts

Workflow now:
1. quarto render creates PPTX
2. q4s pdf exports PPTX to PDF
3. User gets both PPTX and PDF in one command

All 48 tests passing, type checking passes with 0 errors.

--- a/templates/render.sh.template
+++ b/templates/render.sh.template
@@ -11,6 +11,16 @@ quarto render "${PRESENTATION_NAME}.qmd"
 
 if [ $? -eq 0 ]; then
     echo "✓ Successfully created ${PRESENTATION_NAME}.pptx"
+
+    echo "Exporting ${PRESENTATION_NAME}.pptx to PDF..."
+    q4s pdf
+
+    if [ $? -eq 0 ]; then
+        echo "✓ Successfully created ${PRESENTATION_NAME}.pdf"
+    else
+        echo "✗ PDF export failed"
+        exit 1
+    fi
 else
     echo "✗ Rendering failed"
     exit 1
