--- a/templates/render.sh.template
+++ b/templates/render.sh.template
@@ -1,22 +1,24 @@
 #!/bin/sh
-# Render script for Quarto presentation
-# This script renders the .qmd file to PowerPoint format
+# Render Quarto file and export to PDF
+# Supports both PowerPoint (.pptx) and Word (.docx) formats
 
 set -e
 
-PRESENTATION_NAME="{{PRESENTATION_NAME}}"
+FILE_NAME="{{FILE_NAME}}"
 
-echo "Rendering ${PRESENTATION_NAME}.qmd to PowerPoint..."
-quarto render "${PRESENTATION_NAME}.qmd"
+echo "Rendering ${FILE_NAME}.qmd..."
+quarto render "${FILE_NAME}.qmd"
 
 if [ $? -eq 0 ]; then
-    echo "✓ Successfully created ${PRESENTATION_NAME}.pptx"
+    echo "✓ Successfully rendered ${FILE_NAME}.qmd"
 
-    echo "Exporting ${PRESENTATION_NAME}.pptx to PDF..."
+    echo "Exporting to PDF..."
     q4s pdf
 
     if [ $? -eq 0 ]; then
-        echo "✓ Successfully created ${PRESENTATION_NAME}.pdf"
+        echo "✓ Successfully exported to PDF"
+        echo ""
+        echo "Output files created in current directory"
     else
         echo "✗ PDF export failed"
         exit 1
