--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ description = "Tool for working with quarto in Schuberg Philis."
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "llm>=0.15",
 ]
 authors = [
     { name = "lsimons" }
